--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="~/assets/react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>retrain-project-workflow</title>
     <style>
@@ -19,6 +19,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- JS调试区域 -->
+    <script>
+      // 🌀 Loading...
+    </script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
