--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="~/assets/react.svg" />
+    <link rel="icon" type="image/svg+xml" href="@/assets/react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>retrain-project-workflow</title>
     <style>
       *,
       *::before,
       *::after {
+        margin: 0;
+        padding: 0;
         box-sizing: border-box;
       }
 
